force-app/main/default/objects/OWC_Industry_Wage_Order__mdt/OWC_Industry_Wage_Order__mdt.object-meta.xml
<CustomObject>
    <label>OWC Industry Wage Order</label>
    <pluralLabel>OWC Industry Wage Orders</pluralLabel>
</CustomObject>