force-app/main/default/objects/OWC_Industry_Wage_Order__mdt/fields/NaicsCodeLevel1EnglishTranslation__c.field-meta.xml
<CustomField>
    <fullName>NaicsCodeLevel1EnglishTranslation__c</fullName>
    <label>NaicsCodeLevel1EnglishTranslation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>