force-app/main/default/objects/OWC_Industry_Wage_Order__mdt/fields/NaicsCodeLevel1SpanishTranslation__c.field-meta.xml
<CustomField>
    <fullName>NaicsCodeLevel1SpanishTranslation__c</fullName>
    <label>NaicsCodeLevel1SpanishTranslation</label>
    <type>TextArea</type>
</CustomField>