force-app/main/default/objects/OWC_Industry_Wage_Order__mdt/fields/NaicsCodeLevel2EnglishTranslation__c.field-meta.xml
<CustomField>
    <fullName>NaicsCodeLevel2EnglishTranslation__c</fullName>
    <label>NaicsCodeLevel2EnglishTranslation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>