force-app/main/default/objects/OWC_Industry_Wage_Order__mdt/fields/NaicsCodeLevel2SpanishTranslation__c.field-meta.xml
<CustomField>
    <fullName>NaicsCodeLevel2SpanishTranslation__c</fullName>
    <label>NaicsCodeLevel2SpanishTranslation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>