force-app/main/default/objects/OWC_Industry_Wage_Order__mdt/fields/OWC_Industry__c.field-meta.xml
<CustomField>
    <fullName>OWC_Industry__c</fullName>
    <label>OWC Industry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>