force-app/main/default/objects/OWC_Industry_Wage_Order__mdt/fields/OWC_NAICS_Discription__c.field-meta.xml
<CustomField>
    <fullName>OWC_NAICS_Discription__c</fullName>
    <label>OWC NAICS Discription</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>